<resources>
    <string name="app_name">Universidad</string>
    <string name="codigo">Código</string>
    <string name="nombre">Nombre</string>
    <string name="programa">Programa</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">CANCELAR</string>
    <string name="listado">LISTADO</string>
    <string name="modificar">Modificar</string>
    <string name="Elimi">Eliminar</string>
    <string name="agregar">Agregar</string>
</resources>
